--- a/views/list.ejs
+++ b/views/list.ejs
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>To Do List</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Hello,Its a Week Day</h1>
+    <h1><%=kindOfDay%></h1>
+    <ul>
+        <li>DSA</li>
+        <li>Dev</li>
+        <li>Core</li>
+    </ul>
 </body>
 </html>
