--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,13 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/CSS/styles.css">
 </head>
 <body>
-    <h1><%=kindOfDay%></h1>
-    <ul>
-        <li>DSA</li>
-        <li>Dev</li>
-        <li>Core</li>
-    </ul>
+    <div class="box" id="heading">
+        <h1><%=kindOfDay%></h1>
+    </div>
+
+    <div class="box">
+            <%for(var i=0 ; i<newListItems.length;i++){ %>   
+        <div class="item">
+            <input type="checkbox">
+            <p><%= newListItems[i] %></p>
+        </div>
+           <% } %>
+
+           <form class="item" action="/" method="post">
+            <input type="text" name="newItem" placeholder=" Add New Item" autocomplete="off">
+            <button type="submit" name="button">+</button>
+        </form>
+    </div>
+    
 </body>
-</html>
+</html> 
