--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="/CSS/styles.css">
 </head>
 <body>
+
     <div class="box" id="heading">
-        <h1><%=kindOfDay%></h1>
+        <h1><%=listTitle%></h1>
     </div>
 
     <div class="box">
@@ -26,4 +27,7 @@
     </div>
     
 </body>
+<footer>
+    copyright
+</footer>
 </html> 
