--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,12 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/CSS/styles.css">
-</head>
-<body>
+
+<%- include("header")-%>
 
     <div class="box" id="heading">
         <h1><%=listTitle%></h1>
@@ -25,9 +18,4 @@
             <button type="submit" name="button">+</button>
         </form>
     </div>
-    
-</body>
-<footer>
-    copyright
-</footer>
-</html> 
+    <%- include("footer")-%>
